updated the permission

--- a/.github/workflows/gemini-scheduled-triage.yml
+++ b/.github/workflows/gemini-scheduled-triage.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     timeout-minutes: 7
     permissions:
-      contents: 'read'
+      contents: 'write'
       id-token: 'write'
       issues: 'read'
       pull-requests: 'read'
@@ -242,7 +242,7 @@ jobs:
       needs.triage.outputs.triaged_issues != '' &&
       needs.triage.outputs.triaged_issues != '[]'
     permissions:
-      contents: 'read'
+      contents: 'write'
       issues: 'write'
       pull-requests: 'write'
     steps:
@@ -254,7 +254,7 @@ jobs:
         with:
           app-id: '${{ vars.APP_ID }}'
           private-key: '${{ secrets.APP_PRIVATE_KEY }}'
-          permission-contents: 'read'
+          permission-contents: 'write'
           permission-issues: 'write'
           permission-pull-requests: 'write'
 
