Add the new file

--- a/.github/workflows/gemini-triage.yml
+++ b/.github/workflows/gemini-triage.yml
@@ -27,7 +27,7 @@ jobs:
       contents: 'write'
       id-token: 'write'
       issues: 'read'
-      pull-requests: 'read'
+      pull-requests: 'write'
     steps:
       - name: 'Get repository labels'
         id: 'get_labels'
@@ -55,7 +55,7 @@ jobs:
         id: 'gemini_analysis'
         if: |-
           ${{ steps.get_labels.outputs.available_labels != '' }}
-        uses: 'google-github-actions/run-gemini-cli@v0' # ratchet:exclude
+        uses: 'google-github-actions/run-gemini-cli@main' # ratchet:exclude
         env:
           GITHUB_TOKEN: '' # Do NOT pass any auth tokens here since this runs on untrusted inputs
           ISSUE_TITLE: '${{ github.event.issue.title }}'
@@ -76,7 +76,7 @@ jobs:
           settings: |-
             {
               "model": {
-                "maxSessionTurns": -1
+                "maxSessionTurns": 25
               },
               "telemetry": {
                 "enabled": ${{ vars.GOOGLE_CLOUD_PROJECT != '' }},
@@ -88,60 +88,7 @@ jobs:
                 ]
               }
             }
-          # For reasons beyond my understanding, Gemini CLI cannot set the
-          # GitHub Outputs, but it CAN set the GitHub Env.
-          prompt: |-
-            ## Role
-
-            You are an issue triage assistant. Analyze the current GitHub issue and identify the most appropriate existing labels. Use the available tools to gather information; do not ask for information to be provided.
-
-            ## Guidelines
-
-            - Only use labels that are from the list of available labels.
-            - You can choose multiple labels to apply.
-            - When generating shell commands, you **MUST NOT** use command substitution with `$(...)`, `<(...)`, or `>(...)`. This is a security measure to prevent unintended command execution.
-
-            ## Input Data
-
-            **Available Labels** (comma-separated):
-            ```
-            ${{ env.AVAILABLE_LABELS }}
-            ```
-
-            **Issue Title**:
-            ```
-            ${{ env.ISSUE_TITLE }}
-            ```
-
-            **Issue Body**:
-            ```
-            ${{ env.ISSUE_BODY }}
-            ```
-
-            **Output File Path**:
-            ```
-            ${{ env.GITHUB_ENV }}
-            ```
-
-            ## Steps
-
-            1. Review the issue title, issue body, and available labels provided above.
-
-            2. Based on the issue title and issue body, classify the issue and choose all appropriate labels from the list of available labels.
-
-            3. Convert the list of appropriate labels into a comma-separated list (CSV). If there are no appropriate labels, use the empty string.
-
-            4. Use the "echo" shell command to append the CSV labels to the output file path provided above:
-
-                ```
-                echo "SELECTED_LABELS=[APPROPRIATE_LABELS_AS_CSV]" >> "[filepath_for_env]"
-                ```
-
-                for example:
-
-                ```
-                echo "SELECTED_LABELS=bug,enhancement" >> "/tmp/runner/env"
-                ```
+          prompt: '/gemini-triage'
 
   label:
     runs-on: 'ubuntu-latest'
